package de.hda.fbi.efussgaengerzone.domain.model.owner;

public record Owner(
        String name,
        String email,
        String password
) {}
